src/objects/pse__Budget_Header__c.object
<CustomObject>
    <customHelpPage>pse__BudgetHeaderHelp</customHelpPage>
    <description>When you create a budget of type “Vendor Purchase Order” or “Vendor Purchase Order Change Request” (in order to budget for outbound vendor purchase orders), PSA creates a related budget header record automatically. The budget header sets and enforces limits and overruns that apply to the budget and expense amounts. They also group budgets together per vendor account and project currency: so you can contain vendor budgets for different projects in one header record.

Budgets have a lookup relationship to budget headers.</description>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Budget_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only one active project at a time for project and account combination</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Amount_Consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Consumed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Amount_Overrun_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount Overrun Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Amount_Overrun_Percentage__c</fullName>
        <label>Amount Overrun Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Amount_Remaining__c</fullName>
        <formula>pse__Amount__c - pse__Amount_Consumed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Amount_Consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expense Amount Consumed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Amount_Overrun_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expense Amount Overrun Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Amount_Overrun_Percentage__c</fullName>
        <label>Expense Amount Overrun Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Amount_Remaining__c</fullName>
        <formula>pse__Expense_Amount__c - pse__Expense_Amount_Consumed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Maximum_Consumable_Total_Amount__c</fullName>
        <formula>IF(pse__Total_Amount_Overrun_Allowed__c,(1+pse__Total_Amount_Overrun_Percentage__c)*pse__Total_Amount__c,pse__Total_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Consumable Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Total_Amount_Remaining__c</fullName>
        <formula>IF(pse__Total_Amount__c=0,1,(pse__Total_Amount__c-pse__Total_Amount_Consumed__c)/pse__Total_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Total Amount Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Budget_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Total_Amount_Consumed__c</fullName>
        <formula>pse__Amount_Consumed__c +  pse__Expense_Amount_Consumed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Consumed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Amount_Overrun_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Amount Overrun Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Total_Amount_Overrun_Percentage__c</fullName>
        <label>Total Amount Overrun Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Total_Amount_Remaining__c</fullName>
        <formula>pse__Total_Amount__c - pse__Amount_Consumed__c - pse__Expense_Amount_Consumed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Amount__c</fullName>
        <formula>pse__Amount__c + pse__Expense_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Vendor Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Internal Budget</fullName>
                </value>
                <value>
                    <fullName>Customer Purchase Order Change Request</fullName>
                </value>
                <value>
                    <fullName>Vendor Purchase Order Change Request</fullName>
                </value>
                <value>
                    <fullName>Work Order Change Request</fullName>
                </value>
                <value>
                    <fullName>Internal Budget Change Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Budget Header</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Account_required_and_constant</fullName>
        <active>true</active>
        <errorConditionFormula>OR(LEN(pse__Account__c)=0,ISCHANGED(pse__Account__c))</errorConditionFormula>
        <errorDisplayField>pse__Account__c</errorDisplayField>
        <errorMessage>Account is required and cannot be changed once set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Budget_Amount_Consumed_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(pse__Amount_Consumed__c)</errorConditionFormula>
        <errorDisplayField>pse__Amount_Consumed__c</errorDisplayField>
        <errorMessage>Budget Amount Consumed is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Budget_Total_Required</fullName>
        <active>true</active>
        <description>Budget Total is required</description>
        <errorConditionFormula>ISNULL(pse__Amount__c)</errorConditionFormula>
        <errorDisplayField>pse__Amount__c</errorDisplayField>
        <errorMessage>Budget Total is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Currency_is_constant</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Currency cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Enforce_Amount_Overrun</fullName>
        <active>true</active>
        <errorConditionFormula>IF(pse__Amount_Overrun_Allowed__c,
    IF(OR(ISNULL(pse__Amount_Overrun_Percentage__c),pse__Amount_Overrun_Percentage__c=0),
        pse__Amount_Consumed__c + pse__Expense_Amount_Consumed__c &gt; (1+pse__Total_Amount_Overrun_Percentage__c)*pse__Total_Amount__c, 
        pse__Amount_Consumed__c &gt; (pse__Amount__c *  (1+pse__Amount_Overrun_Percentage__c)) ),
    pse__Amount_Consumed__c &gt; pse__Amount__c)</errorConditionFormula>
        <errorMessage>Cannot update budget amount because the amount consumed is greater than the maximum allowable amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Enforce_Expense_Amount_Overrun</fullName>
        <active>true</active>
        <errorConditionFormula>IF(pse__Expense_Amount_Overrun_Allowed__c,
    IF(OR(ISNULL(pse__Expense_Amount_Overrun_Percentage__c),pse__Expense_Amount_Overrun_Percentage__c=0),
        pse__Amount_Consumed__c + pse__Expense_Amount_Consumed__c &gt; (1+pse__Total_Amount_Overrun_Percentage__c)*pse__Total_Amount__c, 
        pse__Expense_Amount_Consumed__c &gt; (pse__Expense_Amount__c *  (1+pse__Expense_Amount_Overrun_Percentage__c)) ),
    pse__Expense_Amount_Consumed__c &gt; pse__Expense_Amount__c)</errorConditionFormula>
        <errorMessage>Cannot update budget amount because the amount consumed is greater than the maximum allowable expense amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Enforce_Total_Amount_Overrun</fullName>
        <active>true</active>
        <errorConditionFormula>IF(pse__Total_Amount_Overrun_Allowed__c,
    pse__Total_Amount_Consumed__c &gt; (1+pse__Total_Amount_Overrun_Percentage__c)*pse__Total_Amount__c,
    pse__Total_Amount_Consumed__c &gt; pse__Total_Amount__c)</errorConditionFormula>
        <errorMessage>Cannot update budget amount because the amount consumed is greater than the maximum allowable total amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_Currency_Mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(CurrencyIsoCode) != TEXT(pse__Project__r.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>The project&apos;s currency must match the currency of this budget header</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_required_and_constant</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISCHANGED(pse__Project__c),LEN(pse__Project__c)=0)</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>Project is required and cannot be changed once set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Total_Overrun_Requires_Other_Overrun</fullName>
        <active>true</active>
        <description>If the total overrun is allowed, amount overrun and/or expense overrun must also be allowed</description>
        <errorConditionFormula>AND(pse__Total_Amount_Overrun_Allowed__c,NOT(pse__Amount_Overrun_Allowed__c),NOT(pse__Expense_Amount_Overrun_Allowed__c))</errorConditionFormula>
        <errorDisplayField>pse__Total_Amount_Overrun_Allowed__c</errorDisplayField>
        <errorMessage>If Total Amount Overrun Allowed is checked, Amount Overrun Allowed and/or Expense Amount Overrun Allowed must also be checked.</errorMessage>
    </validationRules>
</CustomObject>